github-dark fix for visible bottom line on odd % scale

--- a/vallek-github.user.css
+++ b/vallek-github.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Github Compact
 @namespace      github.com/openstyles/stylus
-@version        1.3.2
+@version        1.3.3
 @description    Github Compact style + distinctive tabs
 @author         Vallek
 ==/UserStyle== */
@@ -77,9 +77,9 @@
     }
     .UnderlineNav-item.selected::after {
         background: var(--underlineNav-borderColor-active, var(--ghd-bg-color, var(--color-canvas-default))) !important;
-        transform: translate(50%, 100%) !important;
-        bottom: 0 !important;
-        height: 2px !important;
+        transform: translateX(50%) !important;
+        bottom: -2px !important;
+        height: 3px !important;
     }
     /* Active Tab color for dark theme */
     @media (prefers-color-scheme: dark) {
